@@ -4,6 +4,7 @@ plugins {
     kotlin("jvm") version "1.8.10"
     kotlin("plugin.serialization") version "1.8.10"
     id("maven-publish")
+    jacoco
 }
 
 group = "com.github.milkcocoa0902"
@@ -18,6 +19,7 @@ tasks.withType<KotlinCompile> {
 
 repositories {
     mavenCentral()
+    maven(url = "https://plugins.gradle.org/m2/")
 }
 
 dependencies {
@@ -25,10 +27,29 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-serialization-properties:1.6.0")
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+    testImplementation("io.mockk:mockk:1.13.7")
 }
 
 tasks.test {
     useJUnitPlatform()
+    // https://github.com/mockk/mockk/issues/681
+    jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
+    finalizedBy(tasks.jacocoTestReport) // report is always generated after tests run
+
+}
+
+tasks.jacocoTestReport {
+    dependsOn(tasks.test) // tests are required to run before generating the report
+    reports {
+        xml.required = true
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir("jacocoHtml")
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.9"
+    reportsDirectory = layout.buildDirectory.dir("jacocoReport")
 }
 
 afterEvaluate {
